# python

./: CHANGELOG.md  CNAME  CONTRIBUTION.md  README.md  main.py  publish.sh  pyproject.toml  requirements.txt  setup.cfg  structure.md  test.py  version.sh
src/dialogware/: __init__.py
src/dialogware/core/: AbstractExecutor.py  AbstractParser.py  AbstractTranslator.py  CommandResult.py  DialogWareProcessor.py  PipelineElement.py  PluginManager.py  __init__.py  executor.py  parser.py  pipeline.py  translator.py
src/dialogware/debuggers/: DSLAnalysisResult.py  DSLDebugger.py  DebugResult.py  ExecutionLog.py  PipelineTrace.py  __init__.py  dsl_debugger.py  execution_debugger.py  nlp_debugger.py  pipeline_debugger.py  setup_debuggers.py
src/dialogware/designers/: pipeline_designer.py
src/dialogware/llm/: anthropic_client.py  ollama_client.py
src/dialogware/plugins/code_generation/: __init__.py
src/dialogware/plugins/file_operations/: FileOperationExecutor.py  FileOperationParser.py  FileOperationTranslator.py  __init__.py
src/dialogware/plugins/sql_operations/: SQLExecutor.py  SQLParser.py  SQLSchema.py  __init__.py  initialize_module.py
src/dialogware/utils/: storage.py
